@@ -121,7 +121,6 @@ asynStatus ATCACommonAsynDriver::writeInt32(asynUser *pasynUser, epicsInt32 valu
         else if(function == (p_daqMux+i)->p_enablePacketHeader)          atcaCommon->enablePacketHeader(value?1:0, i);
         else if(function == (p_daqMux+i)->p_enableHardwareFreeze)        atcaCommon->enableHardwareFreeze(value?1:0, i);
         else if(function == (p_daqMux+i)->p_decimationRateDivisor)       atcaCommon->decimationRateDivisor(value, i);
-        else if(function == (p_daqMux+i)->p_dataBufferSize)              atcaCommon->dataBufferSize(value, i);
         else
         for(int j = 0; j < MAX_DAQMUX_CHN_CNT; j++) {
             if(function == (p_daqMux+i)->p_inputMuxSelect[j]) {          atcaCommon->inputMuxSelect(value, i, j);
@@ -136,16 +135,6 @@ asynStatus ATCACommonAsynDriver::writeInt32(asynUser *pasynUser, epicsInt32 valu
 
     for(int i = 0; i < MAX_WAVEFORMENGINE_CNT; i++) {
         if(function == (p_waveformEngine+i)->p_initialize      && value) atcaCommon->initWfEngine(i);
-
-        for(int j = 0; j < MAX_WAVEFORMENGINE_CHN_CNT; j++) {
-            if(function == (p_waveformEngine+i)->p_startAddr[j])         atcaCommon->setWfEngineStartAddr((uint64_t) value, i, j);
-            else if(function == (p_waveformEngine+i)->p_endAddr[j])      atcaCommon->setWfEngineEndAddr((uint64_t) value, i, j);
-            else if(function == (p_waveformEngine+i)->p_enabled[j])      atcaCommon->enableWfEngine((value)?1:0, i, j);
-            else if(function == (p_waveformEngine+i)->p_mode[j])         atcaCommon->setWfEngineMode((value)?1:0, i, j);
-            else if(function == (p_waveformEngine+i)->p_msgDest[j])      atcaCommon->setWfEngineMsgDest((value)?1:0, i, j);
-            else if(function == (p_waveformEngine+i)->p_framesAfterTrigger[j])
-                                                                         atcaCommon->setWfEngineFramesAfterTrigger(value, i, j);
-        }
     }
 
     return status;
@@ -183,7 +172,6 @@ void ATCACommonAsynDriver::ParameterSetup(void)
         sprintf(param_name, ENABLEPACKETHEADER_STR, i); createParam(param_name, asynParamInt32, &(p_daqMux+i)->p_enablePacketHeader);
         sprintf(param_name, ENABLEHARDWAREFREEZE_STR, i); createParam(param_name, asynParamInt32, &(p_daqMux+i)->p_enableHardwareFreeze);
         sprintf(param_name, DECIMATIONRATEDIVISOR_STR, i); createParam(param_name, asynParamInt32, &(p_daqMux+i)->p_decimationRateDivisor);
-        sprintf(param_name, DATABUFFERSIZE_STR,        i); createParam(param_name, asynParamInt32, &(p_daqMux+i)->p_dataBufferSize);
         sprintf(param_name, TIMESTAMP_SEC_STR,         i); createParam(param_name, asynParamInt32, &(p_daqMux+i)->p_timestamp_sec);
         sprintf(param_name, TIMESTAMP_NSEC_STR,        i); createParam(param_name, asynParamInt32, &(p_daqMux+i)->p_timestamp_nsec);
         sprintf(param_name, TRIGGERCOUNT_STR,          i); createParam(param_name, asynParamInt32, &(p_daqMux+i)->p_triggerCount);
@@ -209,14 +197,7 @@ void ATCACommonAsynDriver::ParameterSetup(void)
 
     for(int i = 0; i < MAX_WAVEFORMENGINE_CNT; i++) {
         for(int j = 0; j < MAX_WAVEFORMENGINE_CHN_CNT; j++) {
-            sprintf(param_name, WFBUFSTARTADDR_STR, i, j); createParam(param_name, asynParamInt32, &(p_waveformEngine+i)->p_startAddr[j]);
-            sprintf(param_name, WFBUFENDADDR_STR, i, j);   createParam(param_name, asynParamInt32, &(p_waveformEngine+i)->p_endAddr[j]);
-            sprintf(param_name, WFBUFWRADDR_STR, i, j);    createParam(param_name, asynParamInt32, &(p_waveformEngine+i)->p_wrAddr[j]);
-            sprintf(param_name, WFBUFENABLE_STR, i, j);    createParam(param_name, asynParamInt32, &(p_waveformEngine+i)->p_enabled[j]);
-            sprintf(param_name, WFBUFMODE_STR, i, j);      createParam(param_name, asynParamInt32, &(p_waveformEngine+i)->p_mode[j]);
             sprintf(param_name, WFBUFSTATUS_STR, i, j);    createParam(param_name, asynParamInt32, &(p_waveformEngine+i)->p_status[j]);
-            sprintf(param_name, WFBUFMSGDEST_STR, i, j);   createParam(param_name, asynParamInt32, &(p_waveformEngine+i)->p_msgDest[j]);
-            sprintf(param_name, WFBUFFRAFTTRG_STR, i, j);  createParam(param_name, asynParamInt32, &(p_waveformEngine+i)->p_framesAfterTrigger[j]);
         }
         sprintf(param_name, WFBUFINIT_STR, i);             createParam(param_name, asynParamInt32, &(p_waveformEngine+i)->p_initialize);
     }
@@ -276,10 +257,6 @@ void ATCACommonAsynDriver::getWaveformEngineStatus(void)
 
     for(int i = 0; i < MAX_WAVEFORMENGINE_CNT; i++) {
         for(int j = 0; j < MAX_WAVEFORMENGINE_CHN_CNT; j++) {
-            // commet out reading of start addr and end addr since, PVs will set it up
-            // atcaCommon->getWfEngineStartAddr(&val, i, j); setIntegerParam((p_waveformEngine+i)->p_startAddr[j], (int) val);
-            // atcaCommon->getWfEngineEndAddr(&val, i, j);   setIntegerParam((p_waveformEngine+i)->p_endAddr[j], (int) val);
-            atcaCommon->getWfEngineWrAddr(&val64, i, j);    setIntegerParam((p_waveformEngine+i)->p_wrAddr[j], (int) val64);
             atcaCommon->getWfEngineStatus(&val32, i, j);    setIntegerParam((p_waveformEngine+i)->p_status[j], (int) val32);
         }
     }
