@@ -1,3 +1,9 @@
+R2.0.0-beta:   07-19-2022 Dawood Alnajjar
+               - Removed exposure of several firmware specific PVs
+                 - DaqMux buffer size
+                 - Waveform engine enable, mode, msgdst
+                   startAddr, endAddr, wrAddr, frameAfter Trigger
+
 R1.7.0:        07-02-2022  Dawood Alnajjar
                - Added cpsw release tag PV and IOC shell command
                - build against cpsw/framework R4.4.1-1.0.1
